# Copyright (C) 2019 tribe29 GmbH - License: GNU General Public License v2
# This file is part of Checkmk (https://checkmk.com). It is subject to the terms and
# conditions defined in the file COPYING, which is part of this source code package.

[package]
name = "cmk-agent-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "*", features = [ "paw" ] }
reqwest = { version = "*", features = ["blocking", "json", "multipart", "native-tls", "__rustls"] }
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*" }
serde_with = { version = "*" }
uuid = { version = "*", features = ["v4"] }
openssl = { version = "*", features = ["vendored"] }
rustls = { version = "*" }
rustls-pemfile = { version = "*" }
log = { version = "*" }
flexi_logger = { version = "*" }
http = { version = "*" }
anyhow = { version = "*", features = ["backtrace"]}
nix = { version = "*" }
string_enum = { version = "*" }
x509-parser = { version = "*" }
thiserror = { version = "*" }
tempfile = { version = "*" }
flate2 = { version = "*" }
rand = { version = "*" }
tokio = { version = "*", features = ["full"] }
tokio-rustls = { version = "*" }
async-std = { version = "*" }
ipnet = { version = "*" }
toml = { version = "*" }
rpassword = { version = "*" }
async-trait = { version = "*" }
os_info = { version = "*" }
faccess = { version = "*" }
bincode = { version = "*" } # simple binary serialisation
socket2 = { version = "*" }

[target.'cfg(windows)'.dependencies]
mail_slot = { version = "*" }  # windows mailslot api

[patch.crates-io]
wepoll-ffi = { path = "./patch/wepoll-ffi-0.1.2" }

[dev-dependencies]
assert_cmd = { version = "*" }
predicates = { version = "*" }

[profile.release]
opt-level = "z"  # Optimize for size.
