# Copyright (C) 2019 tribe29 GmbH - License: GNU General Public License v2
# This file is part of Checkmk (https://checkmk.com). It is subject to the terms and
# conditions defined in the file COPYING, which is part of this source code package.

[package]
name = "cmk-agent-ctl"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "native-tls", "__rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "1.13" }
uuid = { version = "1.0", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
rustls = { version = "0.20" }
rustls-pemfile = { version = "1.0" }
log = { version = "0.4" }
flexi_logger = { version = "0.22" }
http = { version = "0.2" }
anyhow = { version = "1.0", features = ["backtrace"]}
nix = { version = "0.24" }
string_enum = { version = "0.3" }
x509-parser = { version = "0.13" }
tempfile = { version = "3.3" }
flate2 = { version = "1.0" }
rand = { version = "0.8" }
tokio = { version = "1.18", features = ["full"] }
tokio-rustls = { version = "0.23" }
async-std = { version = "1.11" }
ipnet = { version = "2.5" }
toml = { version = "0.5" }
rpassword = { version = "6.0" }
async-trait = { version = "0.1" }
os_info = { version = "3.3" }
faccess = { version = "0.2" }
bincode = { version = "1.3" } # simple binary serialisation
socket2 = { version = "0.4" }

[target.'cfg(windows)'.dependencies]
mail_slot = { version = "0.1" }  # windows mailslot api

[patch.crates-io]
wepoll-ffi = { path = "./patch/wepoll-ffi-0.1.2" }

[dev-dependencies]
assert_cmd = { version = "*" }
predicates = { version = "*" }

[profile.release]
opt-level = "z"  # Optimize for size.
